[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/levels/Island01/Island01.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/ships/SwedishRoyalYachtAmadis/SwedishRoyalYachtAmadis.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/miscs/SceneSpawner/SceneSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/miscs/CameraRig/CameraRig.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/Ocean/Ocean.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/games/TestAI/TestAI.gd" type="Script" id=6]
[ext_resource path="res://scenes/miscs/DebugOverlay/DebugOverlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/objects/ships/SwedishHemmemaStyrbjorn/SwedishHemmemaStyrbjorn.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/miscs/SelectHint/SelectHint.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/miscs/SpawnZone/SpawnZone.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/BoatControl/BoatControl.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/miscs/SelectorHandler/SelectorHandler.tscn" type="PackedScene" id=12]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 5.07952, 5.72604, -90.8421, -5.07952, -5.72604, 90.8421, -39.794, -1.73972, 330.787, -60.8673, 4.33115, -66.4096, 60.8673, -4.33115, 66.4096, 1.07516, 0.479996, 516.861, 15.9363, -0.0494995, 107.215, -15.9363, 0.0494995, -107.215, 376.531, 0.439484, 504.098, -55.2983, -0.0379333, 49.9876, 55.2983, 0.0379333, -49.9876, 408.792, 0.433472, 294.945, 31.5412, 1.19209e-07, 40.7166, -31.5412, -1.19209e-07, -40.7166, 390.708, 0.439453, 146.79, 55.6902, 1.19209e-07, 25.1583, -55.6902, -1.19209e-07, -25.1583, 235.594, 0.439453, -23.5797, 35.3949, 2.47269, -37.3799, -35.3949, -2.47269, 37.3799, 43.2254, -2.64085, 33.2002, 8.42997, 6.08116, -96.3497, -8.42997, -6.08116, 96.3497, -39.794, -1.73972, 330.787 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="TestAI" type="Spatial"]
script = ExtResource( 6 )

[node name="Ocean" parent="." instance=ExtResource( 5 )]

[node name="Island01" parent="." instance=ExtResource( 1 )]

[node name="SwedishRoyalYachtAmadis" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.985133, 0, 0.171791, 0, 1, 0, -0.171791, 0, -0.985133, -31.164, 0, 90.4712 )
control_mode = "AI"
faction = "Spain"

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.985133, 0, 0.171791, 0, 1, 0, -0.171791, 0, -0.985133, -31.164, 0, 90.4712 )
faction = "Spain"

[node name="SwedishHemmemaStrybjorn" parent="." instance=ExtResource( 8 )]
transform = Transform( -0.0182202, 0, -0.999834, 0, 1, 0, 0.999834, 0, -0.0182202, -85.0742, 0, 93.4747 )

[node name="SwedishHemmemaStrybjorn2" parent="." instance=ExtResource( 8 )]
transform = Transform( -0.794838, 0, -0.606821, 0, 1, 0, 0.606821, 0, -0.794838, -57.2527, 0, -52.6755 )

[node name="SwedishHemmemaStrybjorn3" parent="." instance=ExtResource( 8 )]
transform = Transform( -0.0182202, 0, -0.999834, 0, 1, 0, 0.999834, 0, -0.0182202, -123.084, 0, 0.0533829 )

[node name="CameraRig" parent="." instance=ExtResource( 4 )]
mode = "Gimbal"
target_path = NodePath("../Player/CaptainPlace")
current = true

[node name="Path" type="Path" parent="."]
curve = SubResource( 1 )

[node name="SpawnZone" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -196.977, 0, 361.073 )
spawn_object = ExtResource( 2 )

[node name="SceneSpawner" parent="." instance=ExtResource( 3 )]

[node name="PathTarget" type="Spatial" parent="."]

[node name="SelectHint" parent="PathTarget" instance=ExtResource( 9 )]

[node name="SelectorHandler" parent="." instance=ExtResource( 12 )]

[node name="DebugOverlay" parent="." instance=ExtResource( 7 )]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -262.0
margin_top = -138.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipControl" parent="GUI/MarginContainer" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 242.0
margin_bottom = 118.0
ship_path = NodePath("../../../Player")
selector_path = NodePath("../../../SelectorHandler")

[connection signal="spawn_object" from="SpawnZone" to="." method="_on_SpawnZone_spawn_object"]

[editable path="Player"]
[editable path="Player/SelectArea"]
[editable path="Player/Sticker3D"]
[editable path="Player/HitBox"]
